--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="yOuP08aS3aCFTZgojNm3y5cNARVxXAo0V4Go-rPmens" />
   <meta name="description" content="High Speed Premium SSH SSL/TLS V2Ray Server | Make Your Connection More Secure and Unblock All Sites With SSH Account | Powered By Lalantha Madhushan" />
   <meta name="author" content="Lalantha Madhushan" />
   <meta name="keywords" content="lalantha madhushan, lalantha, madhushan, madushan, mickybro, micky, free ssh server, ssh/ssl servers, dropbear, stunnel, v2ray. ehi, free internet, unblock sites, vps, vpn, injector, sri lanka ehi, ssh sri lanka, sinhala injector, ssh/ssl sinhala, srilanka internet">
