--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   </div>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-02-15 V2Ray Server Added..</b></li>
-      <li>2020-02-12 Singapore Server Updated..</li>
+      <li><b>2020-02-19 Singapore Server Updated..</b></li>
+      <li>2020-02-15 V2Ray Server Added..</li>
       <li>2020-02-09 Two Indian Servers Added..</li>
       <li>2020-02-02 All Servers Tested & Fixed..</li>
       <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
@@ -96,9 +96,9 @@
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-S01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>45.76.144.131</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>hysleria</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>hysleria101</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>159.65.130.79</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>clossyo</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>clossyo</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
           </ul>  
         </div>
