--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <p class="h5 text-center">Make Your Connection More Secure and Unblock All Sites With SSH Account</p>
   <br>
   </div>
-    <p class="h4"><b>Latest News</b></p>
+    <p class="h4"><b>Latest Updates</b></p>
     <ul>
       <li><b>2020-02-19 Singapore Server Updated..</b></li>
       <li>2020-02-15 V2Ray Server Added..</li>
@@ -182,14 +182,20 @@
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickysshv2ray.tk</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyv2ray.tk</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: MickySSH</b></li>
             <li class="list-group-item list-group-item-white">
                 <!-- Button trigger modal -->
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
           Get Server Details
         </button>
-            </li>            
+            </li>
+            <li class="list-group-item list-group-item-white">
+                <!-- Button trigger modal -->
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter1">
+          Get Server Details
+        </button>
+            </li>              
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -212,18 +218,44 @@
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Protocol: VMess</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickysshv2ray.tk</b></li>            
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyv2ray.tk</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Server Port: 443</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UserID: 9b2a93cb-67a5-4d79-bffb-d85d72a64939</b></li>            
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UserID: 8dff7667-4ba4-48be-9a1b-cb18a65e8edd</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>AlterID: 32</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Security: Auto</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Network Type: WebSocket</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Header: Your Host</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /f468a2/</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /97685b/</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
           </ul>  
+        </div>
+      </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle"><b>Latest Updates</b></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-newspaper" aria-role="presentation" aria-label="NEWSPAPER"></i>&nbsp;&nbsp;Important</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-19</b> Singapore V2Ray Server Updated..</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-19</b> Singapore SSH/SSL Server Updated..</b></li>
         </div>
       </div>
       </div>
@@ -259,6 +291,12 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+    $(window).on('load', function() {
+        $('#exampleModalCenter1').modal('show');
+    });
+  </script>
 
   </body>
 </html>
