--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 </div>
     <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
-    <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
+    <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp (Not Free)</p>
     <br>
     <p class="h4 m-3"><b>Support</b></p>
     <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> or drop me a email</p>
