--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
   <p class="h6 text-danger"><b>* Sever Code "XX-TS0X" - Servers Found in Internet. Owner Unkown.</b></p>
   <p class="h4 m-3"><b>SSH/SSL Servers</b></p>
 <!-- Row 1 -->
-  <div class="card-deck">
+  <div class="card-deck text-center">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-S01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>159.65.130.79</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>clossyo</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>clossyo</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;159.65.130.79</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;clossyo</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;clossyo</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -107,11 +107,11 @@
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outlying Islands Flag"></i>&nbsp;&nbsp;US-S01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>United States</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>129.213.122.165</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;United States</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;129.213.122.165</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -119,17 +119,17 @@
     </div>
     <br>
 <!-- Row 2 -->
-     <div class="card-deck">
+     <div class="card-deck text-center">
      
      <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-au" aria-role="presentation" aria-label="Australia Flag"></i>&nbsp;&nbsp;AZ-S01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Australia</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>168.138.10.35</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;Australia</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;168.138.10.35</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -137,27 +137,27 @@
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-au" aria-role="presentation" aria-label="Australia Flag"></i>&nbsp;&nbsp;AZ-S02</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Australia</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>168.138.12.39</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>muzzle</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;Australia</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;168.138.12.39</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;muzzle</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
     </div>
     <br>
     <!-- Row 3 -->
-     <div class="card-deck">
+     <div class="card-deck text-center">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-in" aria-role="presentation" aria-label="India Flag"></i>&nbsp;&nbsp;IN-S01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>India</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>140.238.255.99</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;India</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;140.238.255.99</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -165,32 +165,34 @@
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-in" aria-role="presentation" aria-label="India Flag"></i>&nbsp;&nbsp;IN-S01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>India</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>140.238.247.30</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>&nbsp;&nbsp;India</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;140.238.247.30</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
     </div> 
     <!-- Row 3 -->   <div id="v2ray"></div>
   <p class="h4 m-3"><b>V2Ray Servers</b></p>
-   <div class="card-deck">
+   <div class="card-deck text-center">
      <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyv2ray.tk</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: MickySSH</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: &nbsp;&nbsp;Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: &nbsp;&nbsp;www.mickyv2ray.tk</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: &nbsp;&nbsp;MickySSH</b></li>
+                     <li class="list-group-item list-group-item-white text-center"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>VMess Code</b></li>            
+            <li class="list-group-item list-group-item-white"><b>vmess://eyJhZGQiOiJ3d3cubWlja3l2MnJheS50ayIsImFpZCI6IjMyIiwiaG9zdCI6IllvdXIgSG9zdCBIZXJlIiwiaWQiOiI4ZGZmNzY2Ny00YmE0LTQ4YmUtOWExYi1jYjE4YTY1ZThlZGQiLCJuZXQiOiJ3cyIsInBhdGgiOiIvOTc2ODViLyIsInBvcnQiOiI0NDMiLCJwcyI6Ik1pY2t5U1NIIHwgVjJyYXkgIiwidGxzIjoidGxzIiwidHlwZSI6IiIsInYiOiIyIn0=</b></li> 
             <li class="list-group-item list-group-item-white">
                 <!-- Button trigger modal -->
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
-          Get Server Details
+          For Manual Configurations
         </button>
-            </li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            </li>           
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>&nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -223,7 +225,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
-          </ul>  
+      </ul> 
         </div>
       </div>
       </div>
@@ -261,7 +263,7 @@
 </div>
     <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
-    <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp (Not Free)</p>
+    <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
     <br>
     <p class="h4 m-3"><b>Support</b></p>
     <p class="h5 m-3">If you have any issue feel free to contact me on: <a class="text-secondary" href="https://www.facebook.com/lalanthamadushan82">Facebook</a> | <a class="text-secondary" href="https://lalantha.me">lalantha.me</a> or drop me a email</p>
