--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-newspaper" aria-role="presentation" aria-label="NEWSPAPER"></i>&nbsp;&nbsp;Important</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-24</b> V2Ray Server Limit Exceed. New Will Be Added Soon</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-24: </b> V2Ray Server Limit Exceed. New Server Will Be Added Soon</b></li>
         </div>
       </div>
       </div>
