--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: &nbsp;&nbsp;Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: &nbsp;&nbsp;www.mickyv2ray.tk</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: &nbsp;&nbsp;www.mickysshfree.tk</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: &nbsp;&nbsp;MickySSH</b></li>
                      <li class="list-group-item list-group-item-white text-center"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>VMess Code</b></li>            
-            <li class="list-group-item list-group-item-white"><b>vmess://eyJhZGQiOiJ3d3cubWlja3l2MnJheS50ayIsImFpZCI6IjMyIiwiaG9zdCI6IllvdXIgSG9zdCBIZXJlIiwiaWQiOiI4ZGZmNzY2Ny00YmE0LTQ4YmUtOWExYi1jYjE4YTY1ZThlZGQiLCJuZXQiOiJ3cyIsInBhdGgiOiIvOTc2ODViLyIsInBvcnQiOiI0NDMiLCJwcyI6Ik1pY2t5U1NIIHwgVjJyYXkgIiwidGxzIjoidGxzIiwidHlwZSI6IiIsInYiOiIyIn0=</b></li> 
+            <li class="list-group-item list-group-item-white"><b>vmess://eyJhZGQiOiJ3d3cubWlja3lzc2hmcmVlLnRrIiwiYWlkIjoiMzIiLCJob3N0IjoiWW91ciBIb3N0IEhlcmUiLCJpZCI6ImE5MzRkNzhjLTliNGYtNDdkOC1iYjQwLWU2N2M3ZjkyMDU2ZCIsIm5ldCI6IndzIiwicGF0aCI6Ii80MzRiZi8iLCJwb3J0IjoiNDQzIiwicHMiOiJNaWNreVNTSCB8IFYyUmF5IiwidGxzIjoidGxzIiwidHlwZSI6Im5vbmUiLCJ2IjoiMiJ9</b></li> 
             <li class="list-group-item list-group-item-white">
                 <!-- Button trigger modal -->
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -214,14 +214,14 @@
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Protocol: VMess</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyv2ray.tk</b></li>            
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickysshfree.tk</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Server Port: 443</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UserID: 8dff7667-4ba4-48be-9a1b-cb18a65e8edd</b></li>            
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UserID: a934d78c-9b4f-47d8-bb40-e67c7f92056d</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>AlterID: 32</b></li>            
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Security: Auto</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Network Type: WebSocket</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Header: Your Host</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /97685b/</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /434bf/</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
@@ -250,7 +250,7 @@
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-newspaper" aria-role="presentation" aria-label="NEWSPAPER"></i>&nbsp;&nbsp;Important</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-24: </b> V2Ray Server Limit Exceed. New Server Will Be Added Soon</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-25: </b> V2Ray Server Updated.</b></li>
         </div>
       </div>
       </div>
