--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;159.65.130.79</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;clossyo</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>&nbsp;&nbsp;clossyo</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">&nbsp;&nbsp;Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: red;">&nbsp;&nbsp;Not Working</span></b></li>
           </ul>  
         </div>
       </div>
