--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
                         <div class="card-body">
                            <h5 class="card-title"><b><i class="em em-newspaper" aria-role="presentation" aria-label="NEWSPAPER"></i>&nbsp;&nbsp;Important</b></h5>
                            <ul class="list-group">
-                           <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-27</b> Singapore SSH/SSL Server Updated..</b></li>
-                           <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-02-19</b> Singapore V2Ray Server Updated..</b></li>
+                           <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-03-02</b> V2Ray Server Under Maintenance</b></li>
                         </div>
                      </div>
                   </div>
